tests/miz/pass/types/pass_type_elaboration_local_mode_expansion_001.miz
definition
  mode LocalModeDef: LocalMode is set;
end;

reserve z for LocalMode;
